# jack2

./: Doxyfile  meson.build  meson_options.txt
common/: JackDriverLoader.cpp  JackTools.cpp  config.h  config.h.in
dbus/: jackdbus.c
doc/: footer.html
tools/: meson_create_man_pages  meson_create_symlink  meson_install_documentation  meson_install_man_pages
